# videolib

./: CMakeLists.txt  README.md
include/: VideoLib.h
src/tests/: VideoTests.cpp
src/video/: FFmpegCustomIO.cpp  FFmpegCustomIO.h  FrameConverter.h  LibAvCapture.cpp  LibAvCapture.h  LibAvVideoStream.cpp  LibAvVideoStream.h  LibAvWriter.cpp  VideoFrame.cpp  VideoFrame.h
